# -*- coding: utf-8 -*-
[metadata]
name = super_resulotion_app
summary = 
description-file =
    README.md
author = 
author-email = 
version = 0.0.1
license = MIT
home-page = https://github.com/adeemadil/super_resulotion_app
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    super_resulotion_app

[entry_points]
deepaas.v2.model =
    super_resulotion_app = super_resulotion_app.api
